--- a/tctc-sard/_includes/header.html
+++ b/tctc-sard/_includes/header.html
@@ -2,9 +2,9 @@
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
+    {%- assign page_lang = page.lang -%}
+    {%- assign page_paths = site.header_pages -%}
     <a class="site-title" rel="author" href="/{{ page_lang }}">{{ site.t[page.lang].title | escape }}</a>
-
     {%- if page_paths -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -18,9 +18,14 @@
 
         <div class="trigger">
           {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
+            {% capture page_path %}
+              {{ page_lang }}/{{ path }}
+            {% endcapture %}
+            <!-- Note: Somehow `page_path` from capture statement above cannot be compared to page's path. Thus another variable is assigned. -->
+            {%- assign final_page_path = page_path | strip -%}
+            {%- assign my_page = site.pages | where: "path", final_page_path | first -%}
             {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
