Add simple language selector with smaller font size.

--- a/tctc-sard/_includes/header.html
+++ b/tctc-sard/_includes/header.html
@@ -28,6 +28,11 @@
               <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
+
+          {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+          {% for page in pages %}
+            <a href="{{ page.url }}" class="language-selector page-link">{{ site.t[page_lang].language[page.lang] }}</a>
+          {% endfor %}
         </div>
       </nav>
     {%- endif -%}
